<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">دار التطوير</string>
    <string name="default_notification_channel_id" translatable="false">TawasolMap_app_channel</string>
    <string name="google_maps_key">AIzaSyCVSid0VeNHYZOnCwkppsm8O9x7lhO4krE</string>
    <string name="error_map_app">Please install a maps application</string>
    <string name="internet_connection_slow_or_disconnected" tools:keep="@string/internet_connection_slow_or_disconnected">"Internet connection slow or disconnected please check network connection."</string>
    <string name="ok">OK</string>
    <string name="server1">Server 1</string>
    <string name="server2">Server 2</string>
    <string name="server3">Server 3</string>
    <string name="speed">Speed</string>
    <string name="Please_select_start_date">Please select start date</string>
    <string name="Please_select_end_date">Please select end date</string>
    <string name="Please_select_vehicle">Please select vehicle</string>
    <string name="Please_select_type">Please select type</string>
    <string name="Please_select_format">Please select format</string>
    <string name="engine_status">Engine Status</string>
    <string name="last_update">Last Update</string>
    <string name="view_history">View History</string>
    <string name="driver_name">Driver\'s Name</string>
    <string name="sensor">Sensors</string>
    <string name="km_h">km/h</string>
    <string name="TawasolMap">Tracking Maps</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_to_your_acc">Login to Your Account</string>
    <string name="sign_in_again">Please sign in again</string>
    <string name="device_is_not_connected">Device is not connected!</string>
    <string name="accept_permission">Accept location permission from settings or relaunch this application.</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_in_your_acc">Sign In Your Account</string>
    <string name="servers">Servers</string>
    <string name="go">Go</string>
    <string name="no_tracks_founded">no tracks founded</string>
    <string name="map">Map</string>
    <string name="vehicles">Vehicles</string>
    <string name="search">Search</string>
    <string name="drawer_map">MAP</string>
    <string name="drawer_tracks">Tracks</string>
    <string name="drawer_notification">@string/notification</string>
    <string name="drawer_geo_zones">Geo Zones</string>
    <string name="drawer_reports">Reports</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_user_setting">User Setting</string>
    <string name="drawer_bind">Bind</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_privacy_policy">Privacy Policy</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="add_unit">Add Units</string>
    <string name="show_on_map">Show On Map</string>
    <string name="add_geo_unit">Add GEO Zone</string>
    <string name="geo_zone">GEO Zones</string>
    <string name="reports">Reports</string>
    <string name="generated_reports">Generated Reports</string>
    <string name="tracks">Tracks</string>
    <string name="notification_setting">Notifications Settings</string>
    <string name="notification_details">Notifications Details</string>
    <string name="track">Track</string>
    <string name="geo_zones">GEO Zones</string>
    <string name="bind_to_vehicle">Bind to Vehicle</string>
    <string name="add_driver">Add Driver</string>
    <string name="fingerprint">Finger Print</string>
    <string name="face_detection">Face Detection</string>
    <string name="about_us">About Us</string>
    <string name="report_history">History</string>
    <string name="privacy_fragment">Privacy Policy</string>
    <string name="commands">Commands</string>
    <string name="setting">Settings</string>
    <string name="history">History</string>
    <string name="change_password">Change Password</string>
    <string name="car_name">Car Name</string>
    <string name="no_events_found">No events found</string>
    <string name="no_groups_found">No groups found</string>
    <string name="this_report_cant_be_generated">This report can\'t be generated!</string>
    <string name="add_notification">Add Notification</string>
    <string name="select_zone_on_map">Select Zone on Map</string>
    <string name="code">Code</string>
    <string name="register">Register</string>
    <string name="verify_code">Verify Code</string>
    <string name="full_name">Full Name</string>
    <string name="job_title">Job Title</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="company_id">Company I.D</string>
    <string name="id_number">I.D. Number</string>
    <string name="zone_name">Zone Name</string>
    <string name="enter_notification_name">Enter Notification Name</string>
    <string name="color">Color</string>
    <string name="time_interval">Time Interval</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="object">Object</string>
    <string name="execute">Execute</string>
    <string name="options">Options</string>
    <string name="type">Type</string>
    <string name="template">Template</string>
    <string name="format">Format</string>
    <string name="select_format">Select Format..</string>
    <string name="show_my_position">Show My Position</string>
    <string name="show_traffic">Google Traffic</string>
    <string name="show_geozones">Geofences</string>
    <string name="map_type">Map Type</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_selection">Save Selection</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="single">Single</string>
    <string name="group">Group</string>
    <string name="add_unit_to_this_group">Add Unit to this Group</string>
    <string name="create_notification">Create Notification</string>
    <string name="unit_list_is_empty">Unit list is empty</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_report">Delete Report</string>
    <string name="reset">Reset</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="bind_using">Bind Using</string>
    <string name="add_user">Add User</string>
    <string name="bind">Bind</string>
    <string name="cancel">Cancel</string>
    <string name="drivers_name">Driver\'s Name</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="are_you_sure_n_you_want_to_delete_this_group">Are you sure you want to delete this group?</string>
    <string name="are_you_sure_n_you_want_to_delete_this_report">Are you sure you want to delete this Report?</string>
    <string name="days_remaining_for_bind">Days Remaining for Bind</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="done">Done</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="total_time">Total Time:</string>
    <string name="total_distance_travelled">Total Distance Travelled:</string>
    <string name="templates">Templates</string>
    <string name="show_push_notification">Show Push Notification</string>
    <string name="full_name_contact_us">Full Name</string>
    <string name="full_name_bind">Full Name</string>
    <string name="current_password">Current Password</string>
    <string name="no_sensor">No Sensor</string>
    <string name="no_sensor_found">No sensor found</string>
    <string name="start_engine">Start Engine</string>
    <string name="get_notified_when_engine_starts">Get notified when engine starts</string>
    <string name="get_notified_when_engine_stops">Get notified when engine stops</string>
    <string name="stop_engine">Stop Engine</string>
    <string name="moving_without_driver">Moving Without Driver</string>
    <string name="get_notified_when_move_without_driver">Get notified when unit moves without driver</string>
    <string name="max_weight">Max Weight</string>
    <string name="kg">Kg</string>
    <string name="top_speed_limit">Top Speed Limit</string>
    <string name="hh">HH</string>
    <string name="min">Min</string>
    <string name="geo_zone_enter">Geo Zone Enter</string>
    <string name="geo_zone_exit">Geo Zone Exit</string>
    <string name="get_notified_when_exit_geo_zone">Get notified when Exit Geo Zone</string>
    <string name="insert_code">Insert Code</string>
    <string name="total_units">Total Units:</string>
    <string name="sign_in_your_account">Sign In Your Account</string>
    <string name="idling_time">Idling time</string>
    <string name="connection_loss_time">Connection Loss</string>
    <string name="liked_your_post">Liked your post</string>
    <string name="set_the_speed_limit_to_get_the_notified">Set the speed limit to Get the notified</string>
    <string name="max_speed">Max Speed</string>
    <string name="enter_max_speed">Enter Max Speed!</string>
    <string name="get_notified_when_enter_geo_zone">Get notified when Enter Geo Zone</string>
    <string name="add_unit_for_geozone_notifications">Add Unit for Geozone Notifications</string>
    <string name="are_you_sure_you_want_to_delete_this_zone">Are you sure you want to delete this zone?</string>
    <string name="delete_zone">Delete Zone</string>
    <string name="subscribed_to_you">Subscribed to you</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_are_far_from_the_vehicle">You are far from the vehicle</string>
    <string name="Device_not_supported">"Device not supported"</string>
    <string name="you_can_not_access_this_option">You can not access this option</string>
    <string name="please_enter_valid_group_name">Please enter valid group name</string>
    <string name="group_name_must_contain_more_than_3_characters">Group name must contain more than 3 characters</string>
    <string name="group_name_must_contain_less_than_50_characters">Group name must contain less than 50 characters</string>
    <string name="please_enter_valid_zone_name">Please enter valid zone name</string>
    <string name="zone_name_must_contain_more_than_3_characters">Zone name must contain more than 3 characters</string>
    <string name="notification_name_must_contain_more_than_3_characters">Notification name must contain more than 3 characters</string>
    <string name="notification_name_must_contain_less_than_50_characters">Notification name must contain less than 50 characters</string>
    <string name="please_select_template">Please select template</string>
    <string name="message_should_be_more_than_10_characters">Message should be more than 10 characters.</string>
    <string name="new_password_and_confirm_password_does_not_match">New Password and Confirm Password does not match</string>
    <string name="please_enter_your_current_password">Please enter your current password</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="password_length_error">Minimum password length is 4 characters</string>
    <string name="password_changed_successfully">Password changed successfully.</string>
    <string name="no_data_found">No data found</string>
    <string name="please_enter_company_id">Please enter Company ID</string>
    <string name="please_enter_ideal_time_hours">Please enter ideal time hours</string>
    <string name="choose_server">Choose server</string>
</resources>