<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_login">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="190dp"
            android:background="@drawable/top_curved_layout">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_signIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_24sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_sign_in_your_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/sign_in" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_sign_in_your_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:fontFamily="@font/sf_open_sans_regular"
                    android:text="@string/sign_in_your_acc"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_signIn"
                    tools:text="@string/sign_in_your_account" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/spinner_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_67"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_sign_in_your_account"
                    app:met_floatingLabel="highlight">

                    <Spinner
                        android:id="@+id/account_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:fontFamily="@font/sf_open_sans_regular"
                        android:hint="@string/servers"
                        android:prompt="@string/choose_server"
                        android:textAlignment="viewStart"
                        android:textColorHint="@color/colorBlack" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_go"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:layout_margin="@dimen/_15sdp"
                    android:backgroundTint="@color/color_red"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/go"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_card_view"
                    app:layout_constraintVertical_bias="0.416"
                    tools:targetApi="lollipop"
                    tools:text="Go" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_logIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_logIn"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/margin_32"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Log in" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_login_your_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:fontFamily="@font/sf_open_sans_regular"
                    android:text="@string/login_to_your_acc"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_logIn"
                    tools:text="Login to Your Account" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_67"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:hint="@string/user_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_login_your_account"
                    app:layout_constraintVertical_bias="0.256">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_open_sans_regular"
                        android:inputType="text"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:layout_marginBottom="132dp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputUserName"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_open_sans_regular"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_logIn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_red_bacakground"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
                    tools:text="Log In" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
