<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_bindUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin= "@dimen/margin_32"
            android:background="@drawable/nav_white_bacakground">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_insertCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_code"
                android:textAlignment="center"
                android:textSize="@dimen/_16sp"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/sf_open_sans_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_15"
                android:fontFamily="@font/sf_open_sans_bold"
                android:textAlignment="center"
                android:hint="@string/enter_code_here"
                app:layout_constraintTop_toBottomOf="@+id/lbl_insertCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_bind"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/color_red"
                android:fontFamily="@font/sf_open_sans_regular"
                android:text="@string/bind"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>